[package]
name = "keywords_cli"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
eyre  = "~0.6"
log = "~0.4"
env_logger = "~0.9"

data = { package = "keywords_data", path = "../../libs/keywords_data" }
model = { package = "keywords_model", path = "../../libs/keywords_model" }
