[package]
name = "keywords_data"
version = "0.1.0"
edition = "2018"

[dependencies]
eyre = "~0.6"
indexmap = { version = "~1.7", features = ["serde-1"] }
itertools = "~0.10"
once_cell = "~1.8"
ron = "~0.6"
serde = "~1.0"
thiserror = "~1.0"

model = { package = "keywords_model", path = "../../libs/keywords_model" }
macros = { package = "keywords_macros", path = "../../libs/keywords_macros" }
